<resources>
    <string name="app_name">ZenohRobotTeleop</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zenoh Robot Teleop</string>
    <string name="nav_header_subtitle">contact@zettascale.tech</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="z_get">ZGet</string>
    <string name="z_put">ZPut</string>
    <string name="z_delete">ZDelete</string>
    <string name="z_sub">ZSub</string>
    <string name="z_queryable">ZQueryable</string>
    <string name="z_pub">ZPub</string>
    <string name="menu_z_put">ZPut</string>
    <string name="menu_z_pub">ZPub</string>
    <string name="menu_z_sub">ZSub</string>
    <string name="menu_z_queryable">ZQueryable</string>
    <string name="menu_z_delete">ZDelete</string>
    <string name="menu_z_get">ZGet</string>
    <string name="menu_z_teleop">ZTeleop</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="robot_default_ke">bot2</string>
    <string name="textViewLinearSensitivity">Linear Sensitivity</string>
    <string name="textviewAngularSensitivity">Angular Sensitivity</string>
    <string name="buttonDeclare">Declare</string>
    <string name="textBattery">Robot Battery</string>
</resources>